Agregado de 404 y ajustes en auth/frontend

--- a/Frontend/src/Login/login.html
+++ b/Frontend/src/Login/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,11 +40,17 @@
                     </div>
                 </div>
                 <div class="form-options">
-                    <a href="#" class="forgot-link">¿Olvidaste la contraseña?</a>
+                    <button type="button" class="reset-password-btn">¿Olvidaste la contraseña?</button>
                 </div>
                 <button type="submit" class="submit-btn">
                     Acceder
                 </button>
+                <div class="separator">
+                    <span>o</span>
+                </div>
+                <div class="signup-link">
+                    <p>¿No tienes una cuenta? <a href="/register" class="register-link">Regístrate</a></p>
+                </div>
             </form>
         </main>
     </div>
