Refactor: eliminar Leaflet-MiniMap, reorganizar assets e incluir auth.js

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -13,7 +13,8 @@
 
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <script src="utils/auth.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <h1>Sistema Aéreo de Detección Argentino</h1>
