--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa de Avistamientos</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -72,10 +74,7 @@
             </div>
             <button class="register-button">
                 <span class="sidebar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="m21,17h-1v-4c0-.552-.447-1-1-1s-1,.448-1,1v4h-5c-1.654,0-3,1.346-3,3v.5c0,.827-.673,1.5-1.5,1.5s-1.5-.673-1.5-1.5V3.5c0-.539-.133-1.044-.351-1.5h5.351c.553,0,1-.448,1-1s-.447-1-1-1H3.5C1.57,0,0,1.57,0,3.5v.5c0,1.654,1.346,3,3,3h2v13.5c0,1.929,1.569,3.499,3.498,3.5h12.002c1.93,0,3.5-1.57,3.5-3.5v-.5c0-1.654-1.346-3-3-3ZM5,5h-2c-.552,0-1-.449-1-1v-.5c0-.827.673-1.5,1.5-1.5s1.5.673,1.5,1.5v1.5Zm17,15.5c0,.827-.673,1.5-1.5,1.5h-8.838c.217-.455.338-.963.338-1.5v-.5c0-.551.448-1,1-1h8c.552,0,1,.449,1,1v.5Z" />
-                    </svg>
+                    <i class="fa-solid fa-thumbtack"></i>
                 </span>
                 Registrar
             </button>
