busqueda de lugares en el buscador

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         
-        <img  class="logo" src="../assets/img/logo.jpg" alt="">
+        <img  class="logo" src="/static/img/logo.jpg" alt="">
         <div class="title-container">
             <h1 class="title">Mapa de Avistamientos</h1>
             <span class="markers-count">3 marcadores</span>
@@ -60,9 +60,9 @@
         </aside>
 
         <div class="map-container">
-            <div class="search-container">
-                <input type="text" class="search-input" placeholder="Buscar ubicación...">
-                <button class="filter-button">
+            <div class="search-container" >
+                <input type="text" class="search-input" placeholder="Buscar ubicación..." id="search-field">
+                <button class="filter-button" >
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3" />
                     </svg>
