--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -71,7 +71,7 @@
         <button class="control-button" id="zoom-in">+</button>
         <button class="control-button" id="zoom-out">-</button>
     </div>
-    <button class="register-button">
+    <button class="register-button" id="register-button">
         <span class="register-icon">
             <i class="fa-solid fa-thumbtack"></i>
         </span>
