--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
+    <script src="/utils/auth.js"></script>
 </head>
 
 <body>
