--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <script src="/utils/auth.js"></script>
+    <script src="/utils/profile.js"></script>
 </head>
 
 <body>
@@ -195,7 +196,7 @@
     </main>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
         </p>
