--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <script src="/utils/auth.js"></script>
-    <script src="/utils/profile.js"></script>
+    <script src="/utils/profile.js" type="module"></script>
 </head>
 
 <body>
