--- a/Frontend/src/Login/login.html
+++ b/Frontend/src/Login/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="login.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <script src="login.js" type="module" defer></script>
+    <script src="/utils/auth.js" type="module" defer></script>
 </head>
 
 <body>
