--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -42,22 +42,28 @@
                 <span class="sidebar-text">Mapa</span>
             </div>
             <div class="sidebar-item">
-                <div class="sidebar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="m7.5 13a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm7.5 14a5.006 5.006 0 0 0 -5-5h-5a5.006 5.006 0 0 0 -5 5v4h2v-4a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v4h2zm2.5-11a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm6.5 14a5.006 5.006 0 0 0 -5-5h-4v2h4a3 3 0 0 1 3 3v4h2z" />
-                    </svg>
-                </div>
+                <a href="/users.html">
+                    <div class="sidebar-icon">
+                        <svg viewBox="0 0 24 24">
+                            <path
+                                d="m7.5 13a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm7.5 14a5.006 5.006 0 0 0 -5-5h-5a5.006 5.006 0 0 0 -5 5v4h2v-4a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v4h2zm2.5-11a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm6.5 14a5.006 5.006 0 0 0 -5-5h-4v2h4a3 3 0 0 1 3 3v4h2z" />
+                        </svg>
+                    </div>
+                </a>
                 <span class="sidebar-text">Usuarios</span>
             </div>
             <div class="sidebar-item">
-                <div class="sidebar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="m21,17h-1v-4c0-.552-.447-1-1-1s-1,.448-1,1v4h-5c-1.654,0-3,1.346-3,3v.5c0,.827-.673,1.5-1.5,1.5s-1.5-.673-1.5-1.5V3.5c0-.539-.133-1.044-.351-1.5h5.351c.553,0,1-.448,1-1s-.447-1-1-1H3.5C1.57,0,0,1.57,0,3.5v.5c0,1.654,1.346,3,3,3h2v13.5c0,1.929,1.569,3.499,3.498,3.5h12.002c1.93,0,3.5-1.57,3.5-3.5v-.5c0-1.654-1.346-3-3-3ZM5,5h-2c-.552,0-1-.449-1-1v-.5c0-.827.673-1.5,1.5-1.5s1.5.673,1.5,1.5v1.5Zm17,15.5c0,.827-.673,1.5-1.5,1.5h-8.838c.217-.455.338-.963.338-1.5v-.5c0-.551.448-1,1-1h8c.552,0,1,.449,1,1v.5Z" />
-                    </svg>
-                </div>
+                <a href="/records.html">
+                    <div class="sidebar-icon">
+                        <svg viewBox="0 0 24 24">
+
+                            <path
+                                d="m21,17h-1v-4c0-.552-.447-1-1-1s-1,.448-1,1v4h-5c-1.654,0-3,1.346-3,3v.5c0,.827-.673,1.5-1.5,1.5s-1.5-.673-1.5-1.5V3.5c0-.539-.133-1.044-.351-1.5h5.351c.553,0,1-.448,1-1s-.447-1-1-1H3.5C1.57,0,0,1.57,0,3.5v.5c0,1.654,1.346,3,3,3h2v13.5c0,1.929,1.569,3.499,3.498,3.5h12.002c1.93,0,3.5-1.57,3.5-3.5v-.5c0-1.654-1.346-3-3-3ZM5,5h-2c-.552,0-1-.449-1-1v-.5c0-.827.673-1.5,1.5-1.5s1.5.673,1.5,1.5v1.5Zm17,15.5c0,.827-.673,1.5-1.5,1.5h-8.838c.217-.455.338-.963.338-1.5v-.5c0-.551.448-1,1-1h8c.552,0,1,.449,1,1v.5Z" />
+                        </svg>
+                    </div>
+                </a>
                 <span class="sidebar-text">Registros</span>
+
             </div>
         </aside>
 
@@ -112,8 +118,7 @@
                             <div class="form-group">
                                 <label for="estimated-height">Altura estimada</label>
                                 <input type="number" id="estimated-height" name="estimated-height"
-                                    placeholder="Metros sobre el nivel del mar" required min="0"
-                                    max="15000">
+                                    placeholder="Metros sobre el nivel del mar" required min="0" max="15000">
                                 <div class="invalid-feedback">Debe estar entre 0 y 15000 mts.</div>
                             </div>
                         </div>
