creacion de users

--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -78,7 +78,9 @@
     </main>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="avistamientos.js" type="module"></script>
+    <script src="records.js" type="module"></script>
+    <script src="/Frontend/src/Index/index.js" type="module"></script>
+
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
         </p>
