--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -78,7 +78,7 @@
     </main>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="avistamientos.js" type="module"></script>
+    <script src="users.js" type="module"></script>
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
         </p>
