--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <meta name="description" content="Mapa interactivo para registrar y visualizar avistamientos de aeronaves">
     <meta name="theme-color" content="#26252A" />
-    <title>Mapa de Avistamientos</title>
+    <title>Registros de Avistamientos</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
@@ -19,7 +19,7 @@
     <header class="header">
         <img class="logo" src="/static/img/logo.jpg" alt="Logo de la aplicación de avistamientos">
         <div class="title-container">
-            <h1 class="title">Mapa de Avistamientos</h1>
+            <h1 class="title">Registros de Avistamientos</h1>
             <span class="markers-count">3 marcadores</span>
         </div>
         <div class="profile">
@@ -33,7 +33,7 @@
 
     <main class="main-content">
         <aside class="sidebar">
-            <div class="sidebar-item active">
+            <div class="sidebar-item">
                 <div class="sidebar-icon">
                     <a href="/index.html">
                         <svg viewBox="0 0 24 24">
@@ -55,32 +55,27 @@
             </div>
             <span class="sidebar-text">Usuarios</span>
             </div>
-            <div class="sidebar-item">
+            <div class="sidebar-item active">
                 <a href="/records.html">
                     <div class="sidebar-icon">
                         <svg viewBox="0 0 24 24">
-
                             <path
                                 d="m21,17h-1v-4c0-.552-.447-1-1-1s-1,.448-1,1v4h-5c-1.654,0-3,1.346-3,3v.5c0,.827-.673,1.5-1.5,1.5s-1.5-.673-1.5-1.5V3.5c0-.539-.133-1.044-.351-1.5h5.351c.553,0,1-.448,1-1s-.447-1-1-1H3.5C1.57,0,0,1.57,0,3.5v.5c0,1.654,1.346,3,3,3h2v13.5c0,1.929,1.569,3.499,3.498,3.5h12.002c1.93,0,3.5-1.57,3.5-3.5v-.5c0-1.654-1.346-3-3-3ZM5,5h-2c-.552,0-1-.449-1-1v-.5c0-.827.673-1.5,1.5-1.5s1.5.673,1.5,1.5v1.5Zm17,15.5c0,.827-.673,1.5-1.5,1.5h-8.838c.217-.455.338-.963.338-1.5v-.5c0-.551.448-1,1-1h8c.552,0,1,.449,1,1v.5Z" />
                         </svg>
                 </a>
             </div>
             <span class="sidebar-text">Registros</span>
-
             </div>
         </aside>
 
         <div class="map-container">
-            <div id="map" aria-label="Mapa interactivo de avistamientos"></div>
-
-
-
+            <div id="map" aria-label="Mapa interactivo de avistamientos">
+                <!-- Aquí se cargarán los avistamientos -->
+            </div>
+        </div>
     </main>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="records.js" type="module"></script>
-    <script src="/Frontend/src/Index/index.js" type="module"></script>
-
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
         </p>
