Retoques de records 2

--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -77,8 +77,7 @@
 
     <script src="records.js" type="module"></script>
     <noscript>
-        <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
-        </p>
+        <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.</p>
     </noscript>
 </body>
 
