--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -33,37 +33,34 @@
     <main class="main-content">
         <aside class="sidebar">
             <div class="sidebar-item active">
-                <div class="sidebar-icon">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="m23.943,16.846l-11.943,7.166L.057,16.846l5.664-3.398,1.478,1.445-3.255,1.953,8.057,4.834,8.057-4.834-3.256-1.953,1.478-1.445,5.665,3.399ZM7.058,11.958c-2.736-2.737-2.736-7.178-.008-9.907,1.322-1.322,3.081-2.05,4.95-2.05s3.628.728,4.949,2.05c1.322,1.322,2.051,3.08,2.051,4.95s-.729,3.627-2.051,4.95l-4.949,4.841-4.942-4.833Zm1.406-1.422l3.536,3.458,3.543-3.466c.937-.937,1.457-2.192,1.457-3.528s-.521-2.591-1.465-3.536-2.199-1.464-3.535-1.464-2.592.52-3.536,1.464c-1.949,1.95-1.949,5.122,0,7.071Zm3.536-.545c1.657,0,3-1.343,3-3s-1.343-3-3-3-3,1.343-3,3,1.343,3,3,3Z" />
-                    </svg>
-                </div>
-                <span class="sidebar-text">Mapa</span>
+                <a href="/index.html">
+                    <div class="sidebar-icon">
+                        <svg viewBox="0 0 24 24">
+                            <path d="m23.943,16.846l-11.943,7.166L.057,16.846l5.664-3.398,1.478,1.445-3.255,1.953,8.057,4.834,8.057-4.834-3.256-1.953,1.478-1.445,5.665,3.399ZM7.058,11.958c-2.736-2.737-2.736-7.178-.008-9.907,1.322-1.322,3.081-2.05,4.95-2.05s3.628.728,4.949,2.05c1.322,1.322,2.051,3.08,2.051,4.95s-.729,3.627-2.051,4.95l-4.949,4.841-4.942-4.833Zm1.406-1.422l3.536,3.458,3.543-3.466c.937-.937,1.457-2.192,1.457-3.528s-.521-2.591-1.465-3.536-2.199-1.464-3.535-1.464-2.592.52-3.536,1.464c-1.949,1.95-1.949,5.122,0,7.071Zm3.536-.545c1.657,0,3-1.343,3-3s-1.343-3-3-3-3,1.343-3,3,1.343,3,3,3Z" />
+                        </svg>
+                    </div>
+                    <span class="sidebar-text">Mapa</span>
+                </a>
             </div>
             <div class="sidebar-item">
                 <a href="/users.html">
                     <div class="sidebar-icon">
                         <svg viewBox="0 0 24 24">
-                            <path
-                                d="m7.5 13a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm7.5 14a5.006 5.006 0 0 0 -5-5h-5a5.006 5.006 0 0 0 -5 5v4h2v-4a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v4h2zm2.5-11a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm6.5 14a5.006 5.006 0 0 0 -5-5h-4v2h4a3 3 0 0 1 3 3v4h2z" />
+                            <path d="m7.5 13a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm7.5 14a5.006 5.006 0 0 0 -5-5h-5a5.006 5.006 0 0 0 -5 5v4h2v-4a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v4h2zm2.5-11a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-7a2.5 2.5 0 1 0 2.5 2.5 2.5 2.5 0 0 0 -2.5-2.5zm6.5 14a5.006 5.006 0 0 0 -5-5h-4v2h4a3 3 0 0 1 3 3v4h2z" />
                         </svg>
                     </div>
+                    <span class="sidebar-text">Usuarios</span>
                 </a>
-                <span class="sidebar-text">Usuarios</span>
             </div>
             <div class="sidebar-item">
                 <a href="/records.html">
                     <div class="sidebar-icon">
                         <svg viewBox="0 0 24 24">
-
-                            <path
-                                d="m21,17h-1v-4c0-.552-.447-1-1-1s-1,.448-1,1v4h-5c-1.654,0-3,1.346-3,3v.5c0,.827-.673,1.5-1.5,1.5s-1.5-.673-1.5-1.5V3.5c0-.539-.133-1.044-.351-1.5h5.351c.553,0,1-.448,1-1s-.447-1-1-1H3.5C1.57,0,0,1.57,0,3.5v.5c0,1.654,1.346,3,3,3h2v13.5c0,1.929,1.569,3.499,3.498,3.5h12.002c1.93,0,3.5-1.57,3.5-3.5v-.5c0-1.654-1.346-3-3-3ZM5,5h-2c-.552,0-1-.449-1-1v-.5c0-.827.673-1.5,1.5-1.5s1.5.673,1.5,1.5v1.5Zm17,15.5c0,.827-.673,1.5-1.5,1.5h-8.838c.217-.455.338-.963.338-1.5v-.5c0-.551.448-1,1-1h8c.552,0,1,.449,1,1v.5Z" />
+                            <path d="m21,17h-1v-4c0-.552-.447-1-1-1s-1,.448-1,1v4h-5c-1.654,0-3,1.346-3,3v.5c0,.827-.673,1.5-1.5,1.5s-1.5-.673-1.5-1.5V3.5c0-.539-.133-1.044-.351-1.5h5.351c.553,0,1-.448,1-1s-.447-1-1-1H3.5C1.57,0,0,1.57,0,3.5v.5c0,1.654,1.346,3,3,3h2v13.5c0,1.929,1.569,3.499,3.498,3.5h12.002c1.93,0,3.5-1.57,3.5-3.5v-.5c0-1.654-1.346-3-3-3ZM5,5h-2c-.552,0-1-.449-1-1v-.5c0-.827.673-1.5,1.5-1.5s1.5.673,1.5,1.5v1.5Zm17,15.5c0,.827-.673,1.5-1.5,1.5h-8.838c.217-.455.338-.963.338-1.5v-.5c0-.551.448-1,1-1h8c.552,0,1,.449,1,1v.5Z" />
                         </svg>
                     </div>
+                    <span class="sidebar-text">Registros</span>
                 </a>
-                <span class="sidebar-text">Registros</span>
-
             </div>
         </aside>
 
