modal de records

--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -75,6 +75,22 @@
         </div>
     </main>
 
+    <div id="observations-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" id="close-observations-modal">&times;</span>
+            <h2>Detalles</h2>
+            <br>
+            
+            <p><strong>Tipo de Motor:</strong><br>
+            <div class="modal-text"> <span id="modal-tipo-motor"></span></p> </div>
+            
+            <br>
+            <p><strong>Cantidad de Motores:</strong> <br> <span id="modal-cantidad-motores"></span></p>
+            <br>
+            <p><strong>Observaciones:</strong> <br> <span id="modal-observaciones"></span></p>
+        </div>
+    </div>
+
     <script src="records.js" type="module"></script>
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.</p>
