--- a/Frontend/src/Login/login.html
+++ b/Frontend/src/Login/login.html
@@ -7,6 +7,7 @@
     <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="login.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/static/variables.css">
     <script src="login.js" type="module" defer></script>
     <script src="/utils/auth.js" type="module" defer></script>
 </head>
