--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/static/css/variables.css" />
+    <link rel="stylesheet" href="/static/css/profile.css" />
+    <link rel="stylesheet" href="/static/css/navigation.css" />
     <link rel="stylesheet" href="records.css" />
     <script src="/utils/auth.js" type="module" defer></script>
     <script src="/utils/profile.js" type="module" defer></script>
@@ -20,7 +23,6 @@
         <img class="logo" src="/static/img/logo.jpg" alt="Logo de la aplicación de avistamientos">
         <div class="title-container">
             <h1 class="title">Registros de Avistamientos</h1>
-            <span class="markers-count">3 marcadores</span>
         </div>
         <div class="profile">
             <div class="profile-avatar" aria-hidden="true">S</div>
