--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Cuenta</title>
+    <link rel="stylesheet" href="/static/css/variables.css">
     <link rel="stylesheet" href="register.css">
     <script src="register.js" defer></script>
 </head>
