modal terminado de records

--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -82,14 +82,14 @@
             <span class="close-button" id="close-observations-modal">&times;</span>
             <h2>Detalles</h2>
             <br>
-
-            <p><strong>Tipo de Motor :</strong><br>
-            <div class="modal-text"> <span id="modal-tipo-motor"></span></p></div>
-
-            <br>
-            <p><strong>Cantidad de Motores :</strong> <br> <span id="modal-cantidad-motores"></span></p>
-            <br>
-            <p><strong>Observaciones :</strong> <br> <span id="modal-observaciones"></span></p>
+            <p><strong>Tipo de Motor :</strong></p>
+            <input type="text" id="modal-tipo-motor" class="modal-input" readonly>
+            <br><br>
+            <p><strong>Cantidad de Motores :</strong></p>
+            <input type="text" id="modal-cantidad-motores" class="modal-input" readonly>
+            <br><br>
+            <p><strong>Observaciones :</strong></p>
+            <textarea id="modal-observaciones" class="modal-input" readonly></textarea>
         </div>
     </div>
 
