--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -71,10 +71,9 @@
         </aside>
 
         <div class="map-container">
-            <div class="search-and-table-container">
-                <input type="text" id="search-input" placeholder="Buscar ubicaciones..." class="search-input">
-                <div id="map" aria-label="Mapa interactivo de avistamientos">
-                </div> <!-- Aquí se cargarán los avistamientos -->
+            
+            <div id="map" aria-label="Mapa interactivo de avistamientos">
+                <!-- Aquí se cargarán los avistamientos -->
             </div>
         </div>
     </main>
