--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -70,12 +70,12 @@
             </div>
         </aside>
         
-        <div class="map-container">
+        <div class="register-container">
 
 
             
 
-                <div id="map" aria-label="Mapa interactivo de avistamientos">
+                <div id="registro" aria-label="Mapa interactivo de avistamientos">
                     <!-- Aquí se cargarán los avistamientos -->
 
                 </div>
