--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -11,6 +11,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="users.css" />
+    <link rel="stylesheet" href="/static/css/variables.css" />
+    <link rel="stylesheet" href="/static/css/profile.css" />
+    <link rel="stylesheet" href="/static/css/navigation.css" />
     <script src="/utils/auth.js" type="module" defer></script>
     <script src="/utils/profile.js" type="module" defer></script>
 </head>
