--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -35,7 +35,7 @@
 
     <main class="main-content">
         <aside class="sidebar">
-            <div class="sidebar-item active">
+            <div class="sidebar-item active hidden">
                 <a href="/index.html">
                     <div class="sidebar-icon">
                         <svg viewBox="0 0 24 24">
@@ -45,7 +45,7 @@
                     <span class="sidebar-text">Mapa</span>
                 </a>
             </div>
-            <div class="sidebar-item">
+            <div class="sidebar-item hidden" data-permissions="viewUsers">
                 <a href="/users.html">
                     <div class="sidebar-icon">
                         <svg viewBox="0 0 24 24">
@@ -55,7 +55,7 @@
                     <span class="sidebar-text">Usuarios</span>
                 </a>
             </div>
-            <div class="sidebar-item">
+            <div class="sidebar-item hidden">
                 <a href="/records.html">
                     <div class="sidebar-icon">
                         <svg viewBox="0 0 24 24">
