--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/variables.css" />
     <link rel="stylesheet" href="/static/css/profile.css" />
     <link rel="stylesheet" href="/static/css/navigation.css" />
+    <link rel="stylesheet" href="/static/css/header.css" />
     <link rel="stylesheet" href="index.css" />
     <script src="/utils/auth.js" type="module" defer></script>
     <script src="/utils/profile.js" type="module" defer></script>
