modal para evento mundo

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -112,8 +112,8 @@
                             <span class="timestamp">2024-19-12 9:09AM</span>
                         </div>
                         <div class="coordinates">
-                            <div><label>Longitud:</label><span>32.7981101</span></div>
-                            <div><label>Latitud:</label><span>-54.6501234</span></div>
+                            <div><label>Longitud:</label><span id="coordinateLog">32.7981101</span></div>
+                            <div><label>Latitud:</label><span id="coordinateLat">-54.6501234</span></div>
                         </div>
                     </div>
                 </div>
